--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <link rel="icon" type="image" href="/img/Spoint-logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Saira:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -11,6 +14,34 @@
     />
     <title>slavakittel-portfolio</title>
   </head>
+  <style type="text/css" media="screen">
+    html {
+      width: 100%;
+      height: 100%;
+      touch-action: pan-y;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+    body {
+      height: 100%;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      overflow: scroll;
+      touch-action: pan-y;
+      margin: 0;
+    }
+    canvas {
+      touch-action: none;
+    }
+  </style>
   <body>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
