--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Saira:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
     <title>slavakittel-portfolio</title>
   </head>
   <style type="text/css" media="screen">
