develop: create particles heart app, first initial gsap page, small fixes with typing

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
   </style>
   <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
   </body>
+  <script type="module" src="./index.tsx"></script>
+  <script type="module" src="./components/Heart.js"></script>
 </html>
