develop: chagne position of text and vehicle, new model for mail, and chagne logo

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
-    <link rel="icon" type="image" href="/img/Spoint-logo.png" />
+    <link rel="icon" type="image" href="/img/s-logo.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Saira:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
-    <title>slavakittel-portfolio</title>
+    <title>skit-studio</title>
   </head>
   <style type="text/css" media="screen">
     html {
